# TEXTTOSPEECH

./: .env  .env.example  Plan.txt  README.md  app.py  main.py  pyproject.toml
scripts/: check_imports.py
