[project]
name = "texttospeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

# Core runtime dependencies (kokoro + numpy are required for local TTS)
dependencies = [
    "numpy==2.4.2",
    "kokoro",
    # Optional / app-level dependencies
    "python-dotenv",
    "google-genai",
    "streamlit",
    "pypdf",
    # Hugging Face integration for GPU support on Spaces
    "huggingface-hub>=0.19.0",
]
